# Mebuex

./: README.md  pyproject.toml  setup.py
example/: meson.build  pyproject.toml  setup.py
example/include/: fancynumerics.hpp
example/mebuexexample/: __init__.py  fancynumerics.pyx
example/src/: fancynumerics.cpp
example/testing/: test_fancynumeric.py
mebuex/: build_ext.py
