[build-system]
requires = ["setuptools>=61"]

[project]
name = "mebuex"
version = "1.1.2"
authors = [
    {name = "Malte J. Ziebarth", email = "mjz.science@fmvkb.de"},
]
description = "Combining build_ext with the Meson build system"
dependencies = [
    "meson"
]
license = {text="MIT"}

[tool.setuptools]
packages = ["mebuex"]